Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7389

Request: log warnings into SQL_ERROR_LOG

    XMLWordPrintable

Details

    • 10.0.20, 10.0.22, 10.1.9-2, 10.0.23, 10.0.24, 10.0.28, 10.0.29

    Description

      Could we have a server variable to log warnings into the SQL_ERROR_LOG?
      It would be really useful, while debugging an application.

      I know I could change the SQL_MODE to convert many warnings into errors, but 1) not all warnings, 2) some queries would not work, which is not what I want.

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              f_razzoli Federico Razzoli
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5h
                  5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.